Finished first version of demo

--- a/data_pre_processing/data.html
+++ b/data_pre_processing/data.html
@@ -7,6 +7,11 @@
 .bar-chart {
     background-color: #C7D9D9;
 }
+      path {
+        stroke: black;
+        stroke-width: 0.5px;
+        fill: white;
+      }
 </style>
 
 <body>
@@ -27,6 +32,8 @@
 <script src='https://d3js.org/d3.v5.min.js'></script>
 <script src="https://unpkg.com/d3-simple-slider/build/d3-simple-slider.js"></script>
 <script src="DataLoader.js"></script>
+<script src="http://d3js.org/topojson.v0.min.js"></script> 
+<script src="https://unpkg.com/topojson-client@3"></script>  
 
 
 </body>
