--- a/data_pre_processing/data.html
+++ b/data_pre_processing/data.html
@@ -1,9 +1,8 @@
 <html>
 <head>
-	<title>DataLoader</title>
+  <title>DataLoader</title>
 </head>
 <style>
-
 .bar-chart {
     background-color: #C7D9D9;
 }
@@ -24,12 +23,6 @@
 <button id = "migration off">Hide Migration Flow</button>
 
 
-<!-- <h2>Range</h2>
-  <div class="row align-items-center">
-    <div class="col-sm-2"><p id="value-range"></p></div>
-    <div class="col-sm"><div id="slider-range"></div></div>
-  </div> -->
-
 <h2>Fill</h2>
 <div class="row align-items-center">
     <div class="col-sm-2"><p id="value-fill"></p></div>
@@ -39,7 +32,7 @@
 
 <script src='https://d3js.org/d3.v5.min.js'></script>
 <script src="https://unpkg.com/d3-simple-slider/build/d3-simple-slider.js"></script>
-<script src="check.js"></script>
+<script src="DataLoader.js"></script>
 <script src="http://d3js.org/topojson.v0.min.js"></script> 
 <script src="https://unpkg.com/topojson-client@3"></script>
   
