Added new button for playing timeline automatically, Added transitions within the same pin attributes for pinning and removing the circles

--- a/data_pre_processing/data.html
+++ b/data_pre_processing/data.html
@@ -21,6 +21,9 @@
 <button id = "media">Media</button>
 <button id = "migration on">Show Migration Flow</button>
 <button id = "migration off">Hide Migration Flow</button>
+<div id="vis">
+  <button id="play-button">Play</button>
+</div>
 
 
 <h2>Fill</h2>
