--- a/data_pre_processing/data.html
+++ b/data_pre_processing/data.html
@@ -34,7 +34,7 @@
 
 
 <script src='https://d3js.org/d3.v5.min.js'></script>
-<script src="https://unpkg.com/d3-simple-slider/build/d3-simple-slider.js"></script>
+<script src="https://unpkg.com/d3-simple-slider"></script>
 <script src="DataLoader.js"></script>
 <script src="http://d3js.org/topojson.v0.min.js"></script> 
 <script src="https://unpkg.com/topojson-client@3"></script>
