--- a/earthquake_3d_replica/index.html
+++ b/earthquake_3d_replica/index.html
@@ -4,7 +4,7 @@
   <title>Planetary.js: Awesome interactive globes for the web</title>
 <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Open+Sans:300italic,400,300,700' rel='stylesheet' type='text/css'>
 <link type="text/css" rel="stylesheet" href="/semantic/css/semantic.min.css">
-<link type="text/css" rel="stylesheet" href="/css/planetaryjs.css">
+<link type="text/css" rel="stylesheet" href="planetaryjs.css">
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
