--- a/data_pre_processing/data.html
+++ b/data_pre_processing/data.html
@@ -69,6 +69,20 @@ hr {
 }
 
 
+div.tooltip {	
+    position: absolute;			
+    text-align: center;			
+    width: 150px;					
+    height: 50px;					
+    padding: 2px;				
+    font: 12px sans-serif;		
+    background: lightsteelblue;	
+    border: 0px;		
+    border-radius: 8px;			
+    pointer-events: none;			
+}
+
+
 </style>
 
 <body>
