Will now show images when hovering over points

--- a/data_pre_processing/data.html
+++ b/data_pre_processing/data.html
@@ -78,21 +78,25 @@ hr {
 
 
 div.tooltip {	
+    background-color: black;
+    color: white;
     position: absolute;			
-    text-align: center;			
-    width: 150px;					
-    height: 50px;					
+    text-align: center;	
+    max-width: 500px;							
     padding: 2px;				
     font: 12px sans-serif;		
-    background: blue;	
     border: 0px;		
     border-radius: 8px;			
     pointer-events: none;			
-    opacity: 70%;
 }
 
 .parameter-value{
   fill: white;
+}
+
+.slide{
+  height: 150px;
+  width: 150px;
 }
 </style>
 
