Added buttons to switch from 3d to 2d map (and back). No unfolding yet, just switching

--- a/3d_globe/data.html
+++ b/3d_globe/data.html
@@ -105,6 +105,8 @@
 <button id = "media">Media</button>
 <button id = "migration on">Show Migration Flow</button>
 <button id = "migration off">Hide Migration Flow</button>
+<button id = "twomap">Switch to 2D world map</button>
+<button id = "threemap">Switch to globe</button>
 
  <hr />
 
