Added new popup when clicked (work in progress) and changed position of hover

--- a/data_pre_processing/data.html
+++ b/data_pre_processing/data.html
@@ -90,6 +90,19 @@ div.tooltip {
     pointer-events: none;			
 }
 
+div.window {
+ background-color: black;
+    color: white;
+    position: absolute;			
+    text-align: center;							
+    padding: 2px;				
+    border: 1;		
+    border-radius: 8px;			
+    pointer-events: none;	
+    height: 500px;
+    width: 500px;
+}
+
 .parameter-value{
   fill: white;
 }
