Added new window for showing pictures, added close button and new transitions

--- a/data_pre_processing/data.html
+++ b/data_pre_processing/data.html
@@ -103,6 +103,19 @@ div.window {
     width: 500px;
 }
 
+div.x{
+   background-color: yellow;
+    color: white;
+    position: absolute;			
+    text-align: center;							
+    padding: 2px;				
+    border: 1;		
+    border-radius: 8px;			
+    pointer-events: none;	
+    height: 10px;
+    width: 10px;
+}
+
 .parameter-value{
   fill: white;
 }
