--- a/data_pre_processing/data.html
+++ b/data_pre_processing/data.html
@@ -99,14 +99,13 @@ div.window {
     border: 1;		
     border-radius: 8px;			
     pointer-events: none;	
-    height: 500px;
-    width: 500px;
+    max-height: 1200px;
+    max-width: 800px;
 }
 
 div.x{
    background-color: yellow;
-    color: white;
-    position: absolute;			
+    color: white;		
     text-align: center;							
     padding: 2px;				
     border: 1;		
@@ -115,6 +114,19 @@ div.x{
     height: 10px;
     width: 10px;
 }
+
+
+div.statistics{
+  margin: 0 0 auto;
+  margin-top: 20px;
+   background-color: brown;
+    color: white;	
+    text-align: center;							
+    padding: 2px;				
+    max-height: 1100px;
+    width: 700px;
+}
+
 
 .parameter-value{
   fill: white;
