Added container for images

--- a/data_pre_processing/data.html
+++ b/data_pre_processing/data.html
@@ -124,7 +124,12 @@ div.statistics{
     text-align: center;							
     padding: 2px;				
     max-height: 1100px;
-    width: 700px;
+    max-width: 800px;
+}
+
+div.slidewindow{
+  margin: 0 0 auto;
+  margin-top: 10px;
 }
 
 
