--- a/data_pre_processing/data.html
+++ b/data_pre_processing/data.html
@@ -101,7 +101,31 @@ div.window {
     pointer-events: none;	
     max-height: 1200px;
     max-width: 800px;
+    min-width: 500px;
+    min-height: 400px;
 }
+
+div.rightresize {
+    position: absolute;
+    width: 10px;
+    top: 0;
+    bottom: 0;
+    right: -5px;
+    opacity: .5;
+    cursor: pointer;
+    float: right;
+}
+
+div.downresize {
+    position: absolute;
+    width: 100%;
+    height: 10px;
+    bottom: 0;
+    right: -5px;
+    opacity: .5;
+    cursor: pointer;
+}
+
 
 div.x{
    background-color: yellow;
@@ -113,8 +137,8 @@ div.x{
     pointer-events: none;	
     height: 10px;
     width: 10px;
+    float: left;
 }
-
 
 div.statistics{
   margin: 0 0 auto;
@@ -127,9 +151,11 @@ div.statistics{
     max-width: 800px;
 }
 
+
 div.slidewindow{
   margin: 0 0 auto;
   margin-top: 10px;
+
 }
 
 
