--- a/data_pre_processing/data.html
+++ b/data_pre_processing/data.html
@@ -91,18 +91,18 @@ div.tooltip {
 }
 
 div.window {
- background-color: black;
-    color: white;
-    position: absolute;			
-    text-align: center;							
-    padding: 2px;				
-    border: 1;		
-    border-radius: 8px;			
-    pointer-events: none;	
-    max-height: 1200px;
-    max-width: 800px;
-    min-width: 500px;
-    min-height: 400px;
+  background-color: black;
+  color: white;
+  position: absolute;			
+  text-align: center;							
+  padding: 2px;				
+  border: 1;		
+  border-radius: 8px;			
+  pointer-events: none;	
+  max-height: 1200px;
+  max-width: 800px;
+  min-width: 500px;
+  min-height: 400px;
 }
 
 div.rightresize {
@@ -126,6 +126,18 @@ div.downresize {
     cursor: pointer;
 }
 
+div.windowgrab{
+  float: left;
+  background-color: green;
+    color: white;		
+    text-align: center;							
+    padding: 2px;				
+    border: 1;		
+    border-radius: 8px;			
+    height: 10px;
+    width: 10px;
+    cursor: pointer;
+}
 
 div.x{
    background-color: yellow;
@@ -137,7 +149,7 @@ div.x{
     pointer-events: none;	
     height: 10px;
     width: 10px;
-    float: left;
+    float: right;
 }
 
 div.statistics{
