Added bigger picture when clicking on slide picture

--- a/data_pre_processing/data.html
+++ b/data_pre_processing/data.html
@@ -99,11 +99,11 @@ div.window {
   border: 1;		
   border-radius: 8px;			
   pointer-events: none;	
-  max-height: 1200px;
-  max-width: 800px;
+  max-height: 1100px;
+  max-width: 1100px;
   min-width: 500px;
   min-height: 400px;
-  z-index: 100;
+  z-index: 1;
 }
 
 div.rightresize {
@@ -154,10 +154,11 @@ div.x{
 }
 
 div.statistics{
-  margin: 0 0 auto;
+  margin: 20 20 auto;
   margin-top: 20px;
-   background-color: brown;
-    color: white;	
+  border-radius: 10px;
+   background-color: #A9A9A9;
+    color: black;	
     text-align: center;							
     padding: 2px;				
     max-height: 1100px;
@@ -180,6 +181,13 @@ div.slidewindow{
   margin: 5 5 auto;
   height: 150px;
   width: 150px;
+}
+
+img{
+    width:100%;
+    height: 100%;
+    max-width:600px;
+    max-height:600px;
 }
 </style>
 
