--- a/3d_globe/data.html
+++ b/3d_globe/data.html
@@ -24,75 +24,174 @@
         background-color: #C7D9D9;
     }
     .play-button-outer {
-      float: right;
-      margin-right: 50px;
-      width: 5em;
-      height: 4.5em;
-      background-color: rgba(0, 0, 0, .25);
-      cursor: pointer;
-    }
+  border-radius: 20px;
+  background-color: gray;
+  float: right;
+  margin-right: 50px;
+  width: 5em;
+  height: 4.5em;
+  cursor: pointer;
+}
 
-    .play-button {
-      margin: 5 auto;
-      top: 5%;
-      margin-right: 20px;
-      float: right;
-      position: relative;  
-      width: 0;
-      height: 0;
-      border-style: solid;
-      border-width: 1.75em 0 1.75em 2.5em;
-      border-color: transparent transparent transparent #FFFFFF;
-      opacity: .75; 
-    }
-
-    .play-button-outer:hover {
-      background-color: rgba(0, 0, 0, .5);
-    }
-
-    .play-button-outer:hover .play-button {
-      opacity: 1;
-    }
-    .play-button:active {
-      background: url(button.png) no-repeat bottom;
-    }
-
-    .pause-button {
-      float:right;
-      margin-right: 50px;
-       width: 2.7em;
-      height: 4.5em;
-      border-style: double;
-      border-width: 0px 0px 0px 37px;
-      border-color: #FFFFFF;
-    }
-
-    hr {
-       margin-top: 10px;
-       margin-bottom: 10px;
-       border: 0;
-       border-top: 1px solid;
-       opacity: .1;
-    }
-
-    .col-sm-2 {
-      float:right;
-      margin-right: 650px;
-    }
+.play-button {
+  margin: 5 auto;
+  top: 5%;
+  margin-right: 20px;
+  float: right;
+  position: relative;  
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 1.75em 0 1.75em 2.5em;
+  border-color: transparent transparent transparent #000;
+  opacity: .75; 
+}
 
 
-    div.tooltip {	
-        position: absolute;			
-        text-align: center;			
-        width: 150px;					
-        height: 50px;					
-        padding: 2px;				
-        font: 12px sans-serif;		
-        background: lightsteelblue;	
-        border: 0px;		
-        border-radius: 8px;			
-        pointer-events: none;			
-    }
+.play-button-outer:hover .play-button {
+  opacity: 1;
+}
+.play-button:active {
+  background: url(button.png) no-repeat bottom;
+}
+
+.pause-button {
+  float:right;
+  margin-right: 50px;
+   width: 2.7em;
+  height: 4.5em;
+  border-style: double;
+  border-width: 0px 0px 0px 37px;
+  border-color: grey;
+}
+
+hr {
+   margin-top: 10px;
+   margin-bottom: 10px;
+   border: 0;
+   border-top: 1px solid;
+   opacity: .1;
+}
+
+.col-sm-2 {
+  float:right;
+  margin-right: 650px;
+}
+
+
+div.tooltip {	
+    margin: 0 0 auto;
+    background-color: black;
+    color: white;
+    position: absolute;			
+    text-align: center;	
+    max-width: 500px;							
+    padding: 2px;				
+    font: 12px sans-serif;		
+    border: 0px;		
+    border-radius: 8px;			
+    pointer-events: none;			
+}
+
+div.window {
+  position: absolute;
+  background-color: black;
+  color: white;
+  text-align: center;							
+  padding: 2px;				
+  border: 1;		
+  border-radius: 8px;			
+  pointer-events: none;	
+  max-height: 1100px;
+  max-width: 1100px;
+  min-width: 200px;
+  min-height: 200px;
+  z-index: 1;
+}
+
+div.rightresize {
+    position: absolute;
+    width: 10px;
+    top: 0;
+    bottom: 0;
+    right: -5px;
+    opacity: .5;
+    cursor: pointer;
+    float: right;
+}
+
+div.downresize {
+    position: absolute;
+    width: 100%;
+    height: 10px;
+    bottom: 0;
+    right: -5px;
+    opacity: .5;
+    cursor: pointer;
+}
+
+div.windowgrab{
+  float: left;
+  background-color: green;
+    color: white;		
+    text-align: center;							
+    padding: 2px;				
+    border: 1;		
+    border-radius: 8px;			
+    height: 10px;
+    width: 10px;
+    cursor: pointer;
+}
+
+div.x{
+   background-color: yellow;
+    color: white;		
+    text-align: center;							
+    padding: 2px;				
+    border: 1;		
+    border-radius: 8px;			
+    pointer-events: none;	
+    height: 10px;
+    width: 10px;
+    float: right;
+}
+
+div.statistics{
+  margin: 20 20 auto;
+  margin-top: 20px;
+  border-radius: 10px;
+   background-color: #A9A9A9;
+    color: black;	
+    text-align: center;							
+    padding: 2px;				
+    max-height: 1100px;
+    max-width: 800px;
+}
+
+
+div.slidewindow{
+  margin: 10 10 auto;
+  margin-top: 10px;
+  cursor: pointer;
+}
+
+
+.parameter-value{
+  fill: white;
+}
+
+.slide{
+  margin: 5 5 auto;
+  height: 150px;
+  width: 150px;
+}
+
+img{
+    width:100%;
+    height: 100%;
+    max-width:600px;
+    max-height:600px;
+}
 </style>
 </head>
 
