--- a/3d_globe/data.html
+++ b/3d_globe/data.html
@@ -230,7 +230,7 @@ img{
   <hr />
 <script src='https://d3js.org/d3.v5.min.js'></script>
 <script src="https://unpkg.com/d3-simple-slider"></script>
-
+<script src='rotate_world.js'></script>
 <script src="DataLoader.js"></script>
 <script src="http://d3js.org/topojson.v0.min.js"></script> 
 <script src="https://unpkg.com/topojson-client@3"></script>
