--- a/3d_globe/data.html
+++ b/3d_globe/data.html
@@ -103,7 +103,7 @@ div.window {
   border-radius: 8px;			
   pointer-events: none;	
   max-height: 1100px;
-  max-width: 1100px;
+  max-width: 842px;
   min-width: 200px;
   min-height: 200px;
   z-index: 1;
@@ -192,6 +192,49 @@ img{
     max-width:600px;
     max-height:600px;
 }
+
+#container{
+  margin: 0 0 auto;
+  width: auto;
+  height: auto;
+}
+
+#globe{
+  height: 750px;
+  width: 60%;
+  float: left;
+  text-align:center;
+}
+
+
+#statsleft{
+  height: 750px;
+    width: 20%;
+    float: left;
+}
+
+
+#statsright{
+  height: 750px;
+    width: 20%;
+    float: left;
+}
+
+.widget{
+  margin: 50 0 auto;
+}
+
+#zoomleft{
+  height: 100%;
+  width: 10%;
+  float: left;
+}
+
+#zoomright{
+  height: 100%;
+  width: 10%;
+  float: right;
+}
 </style>
 </head>
 
@@ -226,6 +269,15 @@ img{
         </div>
       </div>
   </div>
+
+<div id = "container">
+  <div id = "statsleft"> </div>
+    <div id= "globe">
+      <div id = "zoomleft"> </div>
+      <div id = "zoomright"></div>
+    </div>
+  <div id ="statsright"></div>
+</div>
 
   <hr />
 <script src='https://d3js.org/d3.v5.min.js'></script>
