Removed zoom divs for now

--- a/3d_globe/data.html
+++ b/3d_globe/data.html
@@ -200,8 +200,6 @@ img{
 }
 
 #globe{
-  height: 750px;
-  width: 60%;
   float: left;
   text-align:center;
 }
@@ -222,6 +220,7 @@ img{
 
 .widget{
   margin: 50 0 auto;
+  float: right;
 }
 
 #zoomleft{
@@ -273,8 +272,6 @@ img{
 <div id = "container">
   <div id = "statsleft"> </div>
     <div id= "globe">
-      <div id = "zoomleft"> </div>
-      <div id = "zoomright"></div>
     </div>
   <div id ="statsright"></div>
 </div>
