--- a/3d_globe/data.html
+++ b/3d_globe/data.html
@@ -19,7 +19,6 @@
         stroke-width: 0.5px;
         fill: '#06304e';
       }
-
     .bar-chart {
         background-color: #C7D9D9;
     }
@@ -32,7 +31,6 @@
   height: 4.5em;
   cursor: pointer;
 }
-
 .play-button {
   margin: 5 auto;
   top: 5%;
@@ -46,15 +44,12 @@
   border-color: transparent transparent transparent #000;
   opacity: .75; 
 }
-
-
 .play-button-outer:hover .play-button {
   opacity: 1;
 }
 .play-button:active {
   background: url(button.png) no-repeat bottom;
 }
-
 .pause-button {
   float:right;
   margin-right: 50px;
@@ -64,7 +59,6 @@
   border-width: 0px 0px 0px 37px;
   border-color: grey;
 }
-
 hr {
    margin-top: 10px;
    margin-bottom: 10px;
@@ -72,43 +66,38 @@ hr {
    border-top: 1px solid;
    opacity: .1;
 }
-
 .col-sm-2 {
   float:right;
   margin-right: 650px;
 }
-
-
-div.tooltip {	
+div.tooltip { 
     margin: 0 0 auto;
     background-color: black;
     color: white;
-    position: absolute;			
-    text-align: center;	
-    max-width: 500px;							
-    padding: 2px;				
-    font: 12px sans-serif;		
-    border: 0px;		
-    border-radius: 8px;			
-    pointer-events: none;			
+    position: absolute;     
+    text-align: center; 
+    max-width: 500px;             
+    padding: 2px;       
+    font: 12px sans-serif;    
+    border: 0px;    
+    border-radius: 8px;     
+    pointer-events: none;     
 }
-
 div.window {
   position: absolute;
   background-color: black;
   color: white;
-  text-align: center;							
-  padding: 2px;				
-  border: 1;		
-  border-radius: 8px;			
-  pointer-events: none;	
+  text-align: center;             
+  padding: 2px;       
+  border: 1;    
+  border-radius: 8px;     
+  pointer-events: none; 
   max-height: 1100px;
   max-width: 842px;
   min-width: 200px;
   min-height: 200px;
   z-index: 1;
 }
-
 div.rightresize {
     position: absolute;
     width: 10px;
@@ -119,7 +108,6 @@ div.rightresize {
     cursor: pointer;
     float: right;
 }
-
 div.downresize {
     position: absolute;
     width: 100%;
@@ -129,107 +117,88 @@ div.downresize {
     opacity: .5;
     cursor: pointer;
 }
-
 div.windowgrab{
   float: left;
   background-color: green;
-    color: white;		
-    text-align: center;							
-    padding: 2px;				
-    border: 1;		
-    border-radius: 8px;			
+    color: white;   
+    text-align: center;             
+    padding: 2px;       
+    border: 1;    
+    border-radius: 8px;     
     height: 10px;
     width: 10px;
     cursor: pointer;
 }
-
 div.x{
    background-color: yellow;
-    color: white;		
-    text-align: center;							
-    padding: 2px;				
-    border: 1;		
-    border-radius: 8px;			
-    pointer-events: none;	
+    color: white;   
+    text-align: center;             
+    padding: 2px;       
+    border: 1;    
+    border-radius: 8px;     
+    pointer-events: none; 
     height: 10px;
     width: 10px;
     float: right;
 }
-
 div.statistics{
   margin: 20 20 auto;
   margin-top: 20px;
   border-radius: 10px;
    background-color: #A9A9A9;
-    color: black;	
-    text-align: center;							
-    padding: 2px;				
+    color: black; 
+    text-align: center;             
+    padding: 2px;       
     max-height: 1100px;
     max-width: 800px;
 }
-
-
 div.slidewindow{
   margin: 10 10 auto;
   margin-top: 10px;
   cursor: pointer;
 }
-
-
 .parameter-value{
   fill: white;
 }
-
 .slide{
   margin: 5 5 auto;
   height: 150px;
   width: 150px;
 }
-
 img{
     width:100%;
     height: 100%;
     max-width:600px;
     max-height:600px;
 }
-
 #container{
   margin: 0 0 auto;
   width: auto;
   height: auto;
 }
-
 #globe{
-  height: 750px;
-  width: 60%;
   float: left;
   text-align:center;
 }
-
-
 #statsleft{
   height: 750px;
     width: 20%;
     float: left;
 }
-
-
 #statsright{
   height: 750px;
     width: 20%;
     float: left;
 }
-
 .widget{
   margin: 50 0 auto;
+  float: right;
 }
-
 #zoomleft{
   height: 100%;
   width: 10%;
   float: left;
 }
-
 #zoomright{
   height: 100%;
   width: 10%;
@@ -273,8 +242,6 @@ img{
 <div id = "container">
   <div id = "statsleft"> </div>
     <div id= "globe">
-      <div id = "zoomleft"> </div>
-      <div id = "zoomright"></div>
     </div>
   <div id ="statsright"></div>
 </div>
