FINALLYY a start of the slider plot

--- a/3d_globe/globe.html
+++ b/3d_globe/globe.html
@@ -184,6 +184,10 @@ div.slidewindow{
   cursor: pointer;
 }
 
+div.stars {
+           height:50px;
+           width:900px;
+       }
 
 .parameter-value{
   fill: white;
@@ -198,7 +202,14 @@ div.slidewindow{
 #slider-container {
            position: relative;
            height:30px;
-           width:900px;
+           width:1020px;
+           margin-top:165px;
+       }
+
+#slider-plot-container {
+           position: relative;
+           height:30px;
+           width:1020px;
        }
 
 img{
@@ -274,7 +285,8 @@ img{
       <div id = "play-button" class="play-button-outer">
       <div id="play-button" class="play-button"></div>
       </div>
-
+      
+      <div id="slider-plot-container"></div>
       <div id="slider-container"></div>
 
         <div class="col-sm-2">
