--- a/3d_globe/globe.html
+++ b/3d_globe/globe.html
@@ -273,6 +273,138 @@ img{
 
  <hr />
 
+  
+  <div id="map_controls">
+     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="0" height="0"
+          style="position:absolute">
+
+          <symbol id="map-play" viewBox="-40 -40 1300 1300">
+          <path d="M 600,1200 C 268.65,1200 0,931.35 0,600 0,268.65 268.65,0 600,0 c 331.35,0 600,268.65 600,600 0,331.35 -268.65,600 -600,600 z M 450,300.45 450,899.55 900,600 450,300.45 z"/>
+          </symbol>
+
+          <symbol id="map-pause" viewBox="-40 -40 1300 1300">
+          <path d="M 600,0 C 268.62914,0 0,268.62914 0,600 c 0,331.37086 268.62914,600 600,600 331.37086,0 600,-268.62914 600,-600 C 1200,268.62914 931.37086,0 600,0 z m -269.16515,289.38 181.71397,0 0,621.24 -181.71397,0 0,-621.24 z m 356.61633,0 181.71399,0 0,621.24 -181.71399,0 0,-621.24 z"/>
+          </symbol>
+
+                         <symbol id="map-plane" viewBox="-40 190 700 700">
+                 <path d="M0,260.1v548.3h593.4V260.1H0z M567.5,389.7H448.8V286h118.7V389.7z M307.9,389.7V286h115.1v103.7H307.9z
+M422.9,415.5v110H307.9v-110H422.9z M282,389.7H166.9V286H282L282,389.7L282,389.7z M282,415.5v110H166.9v-110H282z M140.9,525.5
+H25.9v-110h115.1L140.9,525.5L140.9,525.5z M140.9,551.5v110H25.9v-110H140.9z M166.9,551.5H282v110H166.9V551.5z M282,687.4v95
+H166.9v-95H282z M307.9,687.4h115.1v95H307.9V687.4z M307.9,661.5v-110h115.1v110H307.9z M448.8,551.5h118.7v110H448.8L448.8,551.5
+L448.8,551.5z M448.8,525.5v-110h118.7v110H448.8z M140.9,286v103.7H25.9V286H140.9z M25.9,687.4h115.1v95H25.9V687.4z M448.8,782.5
+v-95h118.7v95H448.8z"/>
+             </symbol>
+
+             <symbol id="map-globe" viewBox="-40 160 700 700">
+                 <path d="M297.4,213.6c-163.5,0-296.6,133-296.6,296.5s133.1,296.6,296.6,296.6s296.5-133,296.5-296.5
+S461,213.6,297.4,213.6z M27.2,523.1h87.5c1.5,53.1,11.5,102.7,28,145H77.9C48.2,626.9,29.8,577,27.2,523.1z M284.4,311h-93.1
+c25-39.6,57.4-65.4,93.1-70.5V311z M284.4,336.9v160.2H140.7c1.7-60.8,15-116.3,36.3-160.2H284.4L284.4,336.9z M310.4,336.9h107.5
+c21.2,43.9,34.6,99.4,36.3,160.2H310.4V336.9z M310.4,311v-70.4c35.8,5.1,68.2,30.9,93.1,70.5L310.4,311L310.4,311z M392.4,256.8
+c32.8,12.4,62.6,30.9,88,54.2h-47.6C421.1,290,407.5,271.7,392.4,256.8z M162,311h-47.6c25.4-23.3,55.2-41.8,88-54.2
+C187.4,271.7,173.8,290,162,311z M149,336.9c-20.2,45.4-32.8,100.6-34.3,160.2H27.2c2.9-60.8,25.9-116.3,62.5-160.2H149L149,336.9z
+M140.7,523.1h143.8v145H170.1C152.9,626.9,142.2,577,140.7,523.1z M284.4,694.1v85.6c-40.2-5.7-76.1-37.5-101.9-85.6H284.4z
+M310.4,779.7v-85.6h101.9C386.4,742.2,350.6,774,310.4,779.7z M310.4,668.1v-145h143.8c-1.5,54-12.2,103.8-29.5,145H310.4z
+M480.1,523.1h87.5c-2.5,54-21,103.8-50.8,145h-64.8C468.6,625.7,478.7,576.2,480.1,523.1z M480.1,497.1
+c-1.6-59.6-14.1-114.7-34.3-160.2h59.3c36.6,43.9,59.6,99.4,62.5,160.2H480.1z M99.3,694.1h54.9c13.4,27.4,29.9,51,48.3,69.4
+C162.8,748.5,127.6,724.5,99.3,694.1z M392.4,763.5c18.6-18.4,34.9-41.9,48.3-69.4h54.9C467.3,724.5,432.1,748.5,392.4,763.5z"/>
+             </symbol>
+
+                         <symbol id="map-light" viewBox="-40 80 700 700">
+                 <path d="M377,600.7H98.7C44.3,600.7,0,556.4,0,501.9V223.6c0-54.5,44.3-98.7,98.7-98.7H377
+ c54.4,0,98.7,44.3,98.7,98.7v278.3C475.8,556.4,431.5,600.7,377,600.7z M98.7,153.1c-38.9,0-70.5,31.6-70.5,70.5v278.3
+ c0,38.9,31.6,70.5,70.5,70.5H377c38.9,0,70.5-31.6,70.5-70.5V223.6c0-38.9-31.6-70.5-70.5-70.5H98.7z"/>
+                 <path d="M509.2,717.4H168.3c-46.6,0-84.6-38.1-84.6-84.6V291.8c0-46.6,38.1-84.6,84.6-84.6h340.9
+ c46.6,0,84.6,38.1,84.6,84.6v340.9C593.9,679.3,555.8,717.4,509.2,717.4z"/>
+             </symbol>
+
+             <symbol id="map-dark" viewBox="-40 80 700 700">
+                 <path d="M137,336c0-52.5,42.7-95.2,95.2-95.2h260.7v-15.9c0-44.9-36.7-81.6-81.6-81.6H82.6C37.7,143.3,1,180,1,224.9
+v328.7c0,44.9,36.7,81.6,81.6,81.6h59.6c-3.3-9.7-5.2-20.1-5.2-30.9V336z"/>
+                 <path d="M500.5,240.8h-7.6V268h7.6c37.5,0,68,30.5,68,68v268.3c0,37.5-30.5,68-68,68H232.2
+c-26.4,0-49.3-15.1-60.5-37.1h-29.5c12.9,37.4,48.4,64.3,90.1,64.3h268.3c52.5,0,95.2-42.7,95.2-95.2V336
+C595.7,283.5,553,240.8,500.5,240.8z"/>
+                 <path d="M164.2,604.3V336c0-37.5,30.5-68,68-68h260.7v-27.2H232.2c-52.5,0-95.2,42.7-95.2,95.2v268.3
+c0,10.8,1.8,21.2,5.2,30.9h29.5C166.9,626,164.2,615.5,164.2,604.3z"/>
+             </symbol>
+
+                         <symbol id="map-zoom-in" viewBox="-70 100 612 612">
+                 <path d="M212.7,538.7C95.4,538.7,0,443.3,0,326s95.4-212.7,212.7-212.7c117.3,0,212.7,95.4,212.7,212.7
+   S330.1,538.7,212.7,538.7z M212.7,165.4c-88.6,0-160.6,72.1-160.6,160.6c0,88.6,72.1,160.6,160.6,160.6S373.4,414.6,373.4,326
+   C373.4,237.4,301.3,165.4,212.7,165.4z"/>
+                 <path d="M421.2,636.4c-7.8,0-15.5-3.5-20.7-10.2L299.4,494.6c-8.8-11.4-6.6-27.8,4.8-36.5
+   c11.4-8.8,27.8-6.7,36.5,4.8l101.1,131.7c8.8,11.4,6.6,27.8-4.8,36.5C432.3,634.7,426.7,636.4,421.2,636.4z"/>
+                 <rect x="193.2" y="242" width="39.1" height="168"/>
+                 <rect x="128.8" y="306.5" width="168" height="39.1"/>
+             </symbol>
+
+             <symbol id="map-zoom-out" viewBox="-70 100 612 612">
+
+                 <path d="M212.2,537.6C95.2,537.6,0,442.4,0,325.4s95.2-212.2,212.2-212.2s212.2,95.2,212.2,212.2
+   S329.2,537.6,212.2,537.6z M212.2,165.2C123.8,165.2,52,237.1,52,325.4c0,88.3,71.9,160.2,160.2,160.2
+   c88.3,0,160.2-71.9,160.2-160.2C372.4,237.1,300.5,165.2,212.2,165.2z"/>
+                 <path d="M420,635c-7.8,0-15.5-3.5-20.6-10.2L298.6,493.5c-8.7-11.4-6.6-27.7,4.8-36.4c11.4-8.7,27.7-6.6,36.4,4.8
+   l100.8,131.3c8.7,11.4,6.6,27.7-4.8,36.4C431.1,633.2,425.5,635,420,635z"/>
+                 <rect x="128.4" y="305.9" width="167.5" height="39"/>
+             </symbol>
+
+     </svg>
+     <ul id="map_controls_buttons">
+
+       <li id="play-button">
+         <svg class="map_control_button">
+           <use xlink:href="#map-play"></use>
+         </svg>
+         <div class="map_control_button_label">Play</div>
+       </li>
+       <li id="pause-button">
+         <svg class="map_control_button">
+           <use xlink:href="#map-pause"></use>
+         </svg>
+         <div class="map_control_button_label">Pause</div>
+       </li>
+
+                         <li id="twomap">
+                 <svg class="map_control_button">
+                     <use xlink:href="#map-globe"></use>
+                 </svg>
+                 <div class="map_control_button_label">Switch to Plane view</div>
+             </li>
+             <li id="threemap">
+                 <svg class="map_control_button">
+                     <use xlink:href="#map-plane"></use>
+                 </svg>
+                 <div class="map_control_button_label">Switch to Globe view</div>
+             </li>
+
+                         <li id="map_control_color_dark">
+                 <svg class="map_control_button">
+                     <use xlink:href="#map-dark"></use>
+                 </svg>
+                 <div class="map_control_button_label">Toggle map Color</div>
+             </li>
+             <li id="map_control_color_light">
+                 <svg class="map_control_button">
+                     <use xlink:href="#map-light"></use>
+                 </svg>
+                 <div class="map_control_button_label">Toggle map Color</div>
+             </li>
+
+                         <li id="map_control_zoom_in">
+                 <svg class="map_control_button">
+                     <use xlink:href="#map-zoom-in"></use>
+                 </svg>
+                 <div class="map_control_button_label">Zoom in</div>
+             </li>
+             <li id="map_control_zoom_out">
+                 <svg class="map_control_button">
+                     <use xlink:href="#map-zoom-out"></use>
+                 </svg>
+                 <div class="map_control_button_label">Zoom out</div>
+             </li>
+
+     </ul>
+ </div>
+  
 
   <div class="row align-items-center">
    
