--- a/3d_globe/globe.html
+++ b/3d_globe/globe.html
@@ -113,7 +113,7 @@ div.window {
   border-radius: 8px;			
   pointer-events: none;	
   max-height: 1100px;
-  max-width: 1100px;
+  max-width: 450px;
   min-width: 200px;
   min-height: 200px;
   z-index: 1;
@@ -232,13 +232,14 @@ img{
 }
 #statsleft{
   height: 750px;
-    width: 20%;
+    width: 15%;
     float: left;
 }
 #statsright{
+  margin: 0 30 auto;
   height: 750px;
     width: 20%;
-    float: right;
+    float: left;
 }
 .widget{
   margin: 50 30 auto;
