Added colorbar at the bottom, which will serve as legend. Currently hardcoded, working on functionality

--- a/3d_globe/globe.html
+++ b/3d_globe/globe.html
@@ -103,6 +103,32 @@ div.tooltip {
     pointer-events: none;			
 }
 
+div.tooltip_colors{
+    position: absolute;			
+    text-align: center;			
+    width: 180px;					
+    height: 28px;					
+    padding: 2px;				
+    font: 12px sans-serif;		
+    background: lightsteelblue;	
+    border: 0px;		
+    border-radius: 8px;			
+    pointer-events: none;	
+}
+
+div.tooltip_colors_click{
+    position: absolute;			
+    text-align: center;			
+    width: 180px;					
+    height: 28px;					
+    padding: 2px;				
+    font: 12px sans-serif;		
+    background: steelblue;	
+    border: 0px;		
+    border-radius: 8px;			
+    pointer-events: none;	
+}
+
 div.window {
   position: absolute;
   background-color: black;
@@ -432,6 +458,8 @@ c0,10.8,1.8,21.2,5.2,30.9h29.5C166.9,626,164.2,615.5,164.2,604.3z"/>
       <div id= "globe"></div>
     <div id ="statsright"></div>
 </div>
+
+<div id = "legend"></div>
 
   <hr />
 <script src='https://d3js.org/d3.v5.min.js'></script>
