--- a/3d_globe/globe.html
+++ b/3d_globe/globe.html
@@ -292,8 +292,9 @@ img{
 <button id = "style">Style</button>
 <button id = "school">School</button>
 <button id = "media">Media</button>
+<!--
 <button id = "migrationon">Show Migration Flow</button>
-<button id = "migrationoff">Hide Migration Flow</button>
+<button id = "migrationoff">Hide Migration Flow</button>-->
 <!--<button id = "twomap">Switch to 2D world map</button>
 <button id = "threemap">Switch to globe</button>-->
 
@@ -312,7 +313,7 @@ img{
           <path d="M 600,0 C 268.62914,0 0,268.62914 0,600 c 0,331.37086 268.62914,600 600,600 331.37086,0 600,-268.62914 600,-600 C 1200,268.62914 931.37086,0 600,0 z m -269.16515,289.38 181.71397,0 0,621.24 -181.71397,0 0,-621.24 z m 356.61633,0 181.71399,0 0,621.24 -181.71399,0 0,-621.24 z"/>
           </symbol>
 
-                         <symbol id="map-plane" viewBox="-40 190 700 700">
+                                   <symbol id="map-plane" viewBox="-40 190 700 700">
                  <path d="M0,260.1v548.3h593.4V260.1H0z M567.5,389.7H448.8V286h118.7V389.7z M307.9,389.7V286h115.1v103.7H307.9z
 M422.9,415.5v110H307.9v-110H422.9z M282,389.7H166.9V286H282L282,389.7L282,389.7z M282,415.5v110H166.9v-110H282z M140.9,525.5
 H25.9v-110h115.1L140.9,525.5L140.9,525.5z M140.9,551.5v110H25.9v-110H140.9z M166.9,551.5H282v110H166.9V551.5z M282,687.4v95
@@ -336,7 +337,15 @@ C162.8,748.5,127.6,724.5,99.3,694.1z M392.4,763.5c18.6-18.4,34.9-41.9,48.3-69.4h
              </symbol>
             
             <symbol id="migration-flow" viewBox="0 0 20 20">
-              <path d="M17.218,2.268L2.477,8.388C2.13,8.535,2.164,9.05,2.542,9.134L9.33,10.67l1.535,6.787c0.083,0.377,0.602,0.415,0.745,0.065l6.123-14.74C17.866,2.46,17.539,2.134,17.218,2.268 M3.92,8.641l11.772-4.89L9.535,9.909L3.92,8.641z M11.358,16.078l-1.268-5.613l6.157-6.157L11.358,16.078z"></path>
+              <path d="M17.218,2.268L2.477,8.388C2.13,8.535,2.164,9.05,2.542,9.134L9.33,10.67l1.535,6.787c0.083,0.377,0.602,0.415,0.745,0.065l6.123-14.74C17.866,2.46,17.539,2.134,17.218,2.268 M3.92,8.641l11.772-4.89L9.535,9.909L3.92,8.641z M11.358,16.078l-1.268-5.613l6.157-6.157L11.358,16.078z"></path>              
+            </symbol>
+
+            <symbol id="no-migration-flow" viewBox= "0 0 20 20">
+              <path d="M17.218,2.268L2.477,8.388C2.13,8.535,2.164,9.05,2.542,9.134L9.33,10.67l1.535,6.787c0.083,0.377,0.602,0.415,0.745,0.065l6.123-14.74C17.866,2.46,17.539,2.134,17.218,2.268 M3.92,8.641l11.772-4.89L9.535,9.909L3.92,8.641z M11.358,16.078l-1.268-5.613l6.157-6.157L11.358,16.078z"></path> 
+             <path d="M11.469,10l7.08-7.08c0.406-0.406,0.406-1.064,0-1.469c-0.406-0.406-1.063-0.406-1.469,0L10,8.53l-7.081-7.08
+              c-0.406-0.406-1.064-0.406-1.469,0c-0.406,0.406-0.406,1.063,0,1.469L8.531,10L1.45,17.081c-0.406,0.406-0.406,1.064,0,1.469
+              c0.203,0.203,0.469,0.304,0.735,0.304c0.266,0,0.531-0.101,0.735-0.304L10,11.469l7.08,7.081c0.203,0.203,0.469,0.304,0.735,0.304
+              c0.267,0,0.532-0.101,0.735-0.304c0.406-0.406,0.406-1.064,0-1.469L11.469,10z"></path>
             </symbol>
 
              <symbol id="map-light" viewBox="-40 80 700 700">
@@ -389,7 +398,7 @@ c0,10.8,1.8,21.2,5.2,30.9h29.5C166.9,626,164.2,615.5,164.2,604.3z"/>
          </svg>
          <div class="map_control_button_label">Play/Pause</div>
        </li>
-                         <li id="threemap">
+              <li id="threemap">
                  <svg class="map_control_button">
                      <use xlink:href="#map-globe"></use>
                  </svg>
@@ -403,11 +412,14 @@ c0,10.8,1.8,21.2,5.2,30.9h29.5C166.9,626,164.2,615.5,164.2,604.3z"/>
              </li>
 
 
-             <li id="migrationflow">
+             <li id="migrationflow">              
               <svg class="map_control_button">
                 <use xlink:href="#migration-flow"></use>
-              </svg>
-              <div class="map_control_button_label">Toggle Migration Flow on/off</div>
+              </svg>    
+              <svg class="map_control_button">
+               <use xlink:href="#no-migration-flow"></use>
+             </svg>          
+              <div class="map_control_button_label">Toggle Migration Flow</div>
             </li>
 
             <!--             <li id="map_control_color_dark">
