--- a/3d_globe/globe.html
+++ b/3d_globe/globe.html
@@ -494,6 +494,7 @@ c0,10.8,1.8,21.2,5.2,30.9h29.5C166.9,626,164.2,615.5,164.2,604.3z"/>
 </div>
 
 <div id = "legend"></div>
+<input type="checkbox" id="legendCheckbox" checked = false>
 
   <hr />
 <script src='https://d3js.org/d3.v5.min.js'></script>
