--- a/3d_globe/globe.html
+++ b/3d_globe/globe.html
@@ -494,7 +494,10 @@ c0,10.8,1.8,21.2,5.2,30.9h29.5C166.9,626,164.2,615.5,164.2,604.3z"/>
 </div>
 
 <div id = "legend"></div>
-<input type="checkbox" id="legendCheckbox" checked = false>
+<input type="checkbox" id="legendCheckbox" checked = false style="float: left; margin-top: 5px;>">
+<div style="margin-left: 25px;">
+     Click here to show all elements from the legend all at once
+</div>
 
   <hr />
 <script src='https://d3js.org/d3.v5.min.js'></script>
