Removed mistake from checkbox text

--- a/3d_globe/globe.html
+++ b/3d_globe/globe.html
@@ -496,7 +496,7 @@ c0,10.8,1.8,21.2,5.2,30.9h29.5C166.9,626,164.2,615.5,164.2,604.3z"/>
 <div id = "legend"></div>
 <input type="checkbox" id="legendCheckbox" checked = false style="float: left; margin-top: 5px;>">
 <div style="margin-left: 25px;">
-     Click here to show all elements from the legend all at once
+     Click here to show all elements from the legend at once
 </div>
 
   <hr />
