Background image updates

--- a/3d_globe/globe.html
+++ b/3d_globe/globe.html
@@ -17,6 +17,9 @@
     body {
       background-color: rgb(0, 26, 34);
       background: url('images/sky.jpg');
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
       color: white;
     }
     /*
