Viz title updated

--- a/3d_globe/globe.html
+++ b/3d_globe/globe.html
@@ -1,6 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="en" >
+
 <head>
-  <title>DataLoader</title>
+  <meta charset="UTF-8">
+  <title>Picasso</title>
 
 <!-- Dependencies -->
  <script src="https://d3js.org/d3.v5.min.js"></script>
