--- a/3d_globe/globe.html
+++ b/3d_globe/globe.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>DataLoader</title>
+  <title>Artsy Planet</title>
 
 <!-- Dependencies -->
  <script src="https://d3js.org/d3.v5.min.js"></script>
@@ -346,6 +346,10 @@ C162.8,748.5,127.6,724.5,99.3,694.1z M392.4,763.5c18.6-18.4,34.9-41.9,48.3-69.4h
               c0.267,0,0.532-0.101,0.735-0.304c0.406-0.406,0.406-1.064,0-1.469L11.469,10z"></path>
             </symbol>
 
+            <symbol id="time-line" viewBox="0 0 20 20">
+              <path d="M10.25,2.375c-4.212,0-7.625,3.413-7.625,7.625s3.413,7.625,7.625,7.625s7.625-3.413,7.625-7.625S14.462,2.375,10.25,2.375M10.651,16.811v-0.403c0-0.221-0.181-0.401-0.401-0.401s-0.401,0.181-0.401,0.401v0.403c-3.443-0.201-6.208-2.966-6.409-6.409h0.404c0.22,0,0.401-0.181,0.401-0.401S4.063,9.599,3.843,9.599H3.439C3.64,6.155,6.405,3.391,9.849,3.19v0.403c0,0.22,0.181,0.401,0.401,0.401s0.401-0.181,0.401-0.401V3.19c3.443,0.201,6.208,2.965,6.409,6.409h-0.404c-0.22,0-0.4,0.181-0.4,0.401s0.181,0.401,0.4,0.401h0.404C16.859,13.845,14.095,16.609,10.651,16.811 M12.662,12.412c-0.156,0.156-0.409,0.159-0.568,0l-2.127-2.129C9.986,10.302,9.849,10.192,9.849,10V5.184c0-0.221,0.181-0.401,0.401-0.401s0.401,0.181,0.401,0.401v4.651l2.011,2.008C12.818,12.001,12.818,12.256,12.662,12.412"></path>
+            </symbol>
+
              <symbol id="map-light" viewBox="-40 80 700 700">
                  <path d="M377,600.7H98.7C44.3,600.7,0,556.4,0,501.9V223.6c0-54.5,44.3-98.7,98.7-98.7H377
  c54.4,0,98.7,44.3,98.7,98.7v278.3C475.8,556.4,431.5,600.7,377,600.7z M98.7,153.1c-38.9,0-70.5,31.6-70.5,70.5v278.3
@@ -420,6 +424,12 @@ c0,10.8,1.8,21.2,5.2,30.9h29.5C166.9,626,164.2,615.5,164.2,604.3z"/>
               <div class="map_control_button_label">Toggle Migration Flow</div>
             </li>
 
+            <li id="timeline">
+                 <svg class="map_control_button">
+                     <use xlink:href="#time-line"></use>
+                 </svg>
+                 <div class="map_control_button_label">Show Complete Timeline</div>
+             </li>
             <!--             <li id="map_control_color_dark">
                  <svg class="map_control_button">
                      <use xlink:href="#map-dark"></use>
