Added splash screen

--- a/3d_globe/globe.html
+++ b/3d_globe/globe.html
@@ -11,11 +11,13 @@
  <!-- Range slider code -->
  <script src="https://cdn.rawgit.com/RasmusFonseca/d3RangeSlider/master/d3RangeSlider.js"></script>
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-
+<script src="js/vendor/modernizr-2.6.2.min.js"></script>
 <link rel="stylesheet" type="text/css" href="css/slider.css">
 <link rel="stylesheet" type="text/css" href="css/map.css">
 <link rel="stylesheet" type="text/css" href="css/bar.css">
 <link rel="stylesheet" type="text/css" href="css/switch.css">
+<link rel="stylesheet" href="css/normalize.css">
+<link rel="stylesheet" href="css/splash.css">
  <!-- Range slider style -->
  <link href="https://cdn.rawgit.com/RasmusFonseca/d3RangeSlider/master/d3RangeSlider.css" rel="stylesheet">
   <style>
@@ -315,6 +317,20 @@ img{
 <!--<button id = "twomap">Switch to 2D world map</button>
 <button id = "threemap">Switch to globe</button>-->
 
+<div id="loader-wrapper">
+  <div id="loader">
+  </div>
+
+  <div class="loader-section section-left">
+    <img id="loading-image-left" src="images/picasso.png" />
+  </div>
+  <div class="loader-section section-right">
+    <img id="loading-image-right" src="images/names.png" />
+  </div>
+
+</div>
+
+
   <div id="map_controls">
      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="0" height="0"
           style="position:absolute">
@@ -553,6 +569,8 @@ c0,10.8,1.8,21.2,5.2,30.9h29.5C166.9,626,164.2,615.5,164.2,604.3z"/>
 
 
   <hr />
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
 <script src='https://d3js.org/d3.v5.min.js'></script>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js'></script>
@@ -567,6 +585,7 @@ c0,10.8,1.8,21.2,5.2,30.9h29.5C166.9,626,164.2,615.5,164.2,604.3z"/>
 <script src='js/rotate_world.js'></script>
 <script src="js/main.js"></script>
 <script src="js/chart.js"></script>
+<script src="js/splash.js"></script>
 <script src="http://d3js.org/topojson.v0.min.js"></script>
 <script src="https://unpkg.com/topojson-client@3"></script>
 
