--- a/3d_globe/globe.html
+++ b/3d_globe/globe.html
@@ -214,9 +214,9 @@ div.statistics{
 
 
 div.slidewindow{
-  margin: 10 10 auto;
   margin-top: 10px;
   cursor: pointer;
+  display: inline-block
 }
 
 div.stars {
@@ -229,9 +229,12 @@ div.stars {
 }
 
 .slide{
-  margin: 5 5 auto;
+  margin: auto;
+  margin-left: 10px;
+  margin-top: 10px;
   height: 150px;
   width: 150px;
+  text-align:center;
 }
 
 #slider-container {
@@ -266,13 +269,13 @@ img{
 }
 #statsleft{
   height: 750px;
-    width: 20%;
+    width: 10%;
     float: left;
 }
 #statsright{
   margin: 0 30 auto;
   height: 750px;
-    width: 25%;
+    width: 32%;
     float: left;
 }
 .widget{
