--- a/3d_globe/globe.html
+++ b/3d_globe/globe.html
@@ -15,8 +15,10 @@
 <link rel="stylesheet" type="text/css" href="css/map.css">
 <link rel="stylesheet" type="text/css" href="css/bar.css">
 <link rel="stylesheet" type="text/css" href="css/switch.css">
+
  <!-- Range slider style -->
  <link href="https://cdn.rawgit.com/RasmusFonseca/d3RangeSlider/master/d3RangeSlider.css" rel="stylesheet">
+ <link rel="stylesheet" type="text/css" href="css/slider.css">
  
   <style>
     body {
@@ -304,7 +306,7 @@ img{
    text-align: center;
    position:absolute;
    border-radius: 0.25em;
-   top:14.1%;
+   top:13%;
    right:29%;
    background-color: #06304e; 
   }
@@ -485,7 +487,7 @@ c0,10.8,1.8,21.2,5.2,30.9h29.5C166.9,626,164.2,615.5,164.2,604.3z"/>
 
   <div class="row align-items-center">
       
-      <div id="slider-plot-container"></div>
+      <div style='margin-bottom:-2%' id="slider-plot-container"></div>
       <div id="slider-container"></div>
 
         <div class="topcornerdate">
@@ -526,7 +528,7 @@ c0,10.8,1.8,21.2,5.2,30.9h29.5C166.9,626,164.2,615.5,164.2,604.3z"/>
     <div id ="statsright"></div>
 </div>
 
-<div id = "legend"></div>
+<div id = "legend" style="margin-top: -4%; margin-left:1.5%"></div>
 <input type="checkbox" id="legendCheckbox" checked = false style="float: left; margin-top: 5px;>">
 <div style="margin-left: 25px;">
      Click here to show all elements from the legend at once
