--- a/3d_globe/globe.html
+++ b/3d_globe/globe.html
@@ -300,7 +300,7 @@ img{
 }
  .topcorner{
    position:absolute;
-   top:10%;
+   top:7.5%;
    right:5%;
   }
 
@@ -310,8 +310,8 @@ img{
    text-align: center;
    position:absolute;
    border-radius: 0.25em;
-   top:13%;
-   right:29%;
+   top:6%;
+   right:27%;
    background-color: #06304e; 
   }
 
@@ -506,7 +506,7 @@ c0,10.8,1.8,21.2,5.2,30.9h29.5C166.9,626,164.2,615.5,164.2,604.3z"/>
       <div id="slider-container"></div>
 
         <div class="topcornerdate">
-          <h2 style='margin-bottom: 10px'>Time Period</h2>
+          <h2 style='margin-bottom: 10px; font-weight:bold'>Time Period</h2>
           <div id="range-label" style="font-size: 1.5em">0 - 10</div>
         </div>
       </div>
