Made final changes, visualization now fits on screen

--- a/3d_globe/globe.html
+++ b/3d_globe/globe.html
@@ -543,9 +543,9 @@ c0,10.8,1.8,21.2,5.2,30.9h29.5C166.9,626,164.2,615.5,164.2,604.3z"/>
     <div id ="statsright"></div>
 </div>
 
-<div id = "legend" style="margin-top: -4%; margin-left:1.5%"></div>
-<input type="checkbox" id="legendCheckbox" checked = false style="float: left; margin-top: 5px;>">
-<div style="margin-left: 25px;">
+<div id = "legend" style="margin-top: -4%; margin-left:2.5%"></div>
+<input type="checkbox" id="legendCheckbox" checked = false style="float: left; margin-top: 2px; margin-left: 4%">
+<div style="margin-left: 30px;">
      Click here to show all elements from the legend at once
 </div>
 
